# cpkb

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  pyproject.toml  setup.sh  test_binding.py  test_dock.py  test_input_footer.py  test_mount.py  test_tui.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
Formula/: cpkb.rb
extras/completions/: cpkb.fish  cpkb.zsh
extras/plugins/nvim/lua/telescope/_extensions/: cpkb.lua
extras/plugins/vscode/: package.json
extras/plugins/vscode/src/: extension.js
extras/sketchybar/: README.md  cpkb_plugin.sh  hover.sh  sketchybarrc-snippet.sh
scripts/: release.sh
src/cpkb/: __init__.py  cli.py  config.py  db.py  default_snippets.py  tui.py
src/cpkb/completions/: cpkb.bash  cpkb.zsh
tests/: test_cli.py  test_cli_basic.py  test_tui.py  test_vulture.py
