[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cpkb"
version = "2.0.1"
authors = [
  { name="Aarav Shah", email="aarav@example.com" },
]
description = "A terminal-first Competitive Programming Knowledge Base"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "textual>=0.47.0",
]

[project.scripts]
cpkb = "cpkb.cli:main"
