[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cpkb"
version = "2.2.10"
authors = [
  { name="Aarav Shah" },
]
description = "A terminal-first Competitive Programming Knowledge Base"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["competitive-programming", "snippets", "knowledge-base", "terminal", "tui"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.47.0",
]

[project.optional-dependencies]
encrypt = [
    "cryptography>=41.0",
]
dev = [
    "build>=1.2",
    "cryptography>=41.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/Aaravshah2907/cpkb"
Repository = "https://github.com/Aaravshah2907/cpkb"
Issues = "https://github.com/Aaravshah2907/cpkb/issues"
Changelog = "https://github.com/Aaravshah2907/cpkb/releases"

[project.scripts]
cpkb = "cpkb.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
